# redrob-ai-ranking-engine

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  rank.py  render.yaml  submission_metadata.yaml
ai/: README.md  (+2 more)
backend/: .dockerignore  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_create_documents.py  0002_create_candidate_profiles.py  0003_create_job_profiles.py  0004_create_hidden_skill_profiles.py  0005_create_candidate_dna.py  0006_create_decisions.py  0007_create_explanations.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  documents_helpers.py  test_candidates_api.py  test_candidates_engine.py  test_candidates_service.py  test_decision_api.py  test_decision_engine.py  test_decision_service.py  test_dna_api.py  test_dna_engine.py  test_dna_service.py  test_documents_api.py  test_documents_cleaning.py  test_documents_engine.py  test_documents_service.py  test_explainability_engine.py  test_explanation_api.py  test_explanation_service.py  test_foundation.py  test_hidden_skills_api.py  test_hidden_skills_engine.py  test_hidden_skills_service.py  test_jobs_api.py  test_jobs_engine.py  test_jobs_service.py  test_knowledge_api.py  test_knowledge_importers.py  test_knowledge_repository.py  test_knowledge_seed.py  test_knowledge_validation.py  test_ranking.py  test_simulation_service.py  test_system_api.py
(+186 files in other folders)
